--- a/micarrito.html
+++ b/micarrito.html
@@ -11,18 +11,20 @@
         <nav class="nav-principal">
             <div class="botones">
                 <a href="#">Inicio</a>
-                <a href="#">Mis pedidos</a>
+                <a href="MisPedidos.html">Mis pedidos</a>
             </div>
             <div class="entrar">
-                <img src="recursos pagina/usuario.png" alt="usuario">
-                <img src="recursos pagina/carro-de-compras-rapido (1).png" alt="">
+                <img src="img/imagen_2024-03-02_140324687-removebg-preview.png" alt="usuario">
+                <a href="micarrito.html">
+                    <img src="img/carro-de-compras-rapido (1).png" alt="">
+                </a>
             </div>
         </nav>
     </div>
     <div class="Compras">
         <h1>Mi carrito</h1>
         <div class="imagenes">
-            <img src="recursos pagina/blanco.jpg" alt="">
+            <img src="img/blanco.jpg" alt="">
             <div class="datos">
                 <p>Chavindeca</p>
                 <div class="cantidad">
@@ -36,7 +38,7 @@
         </div>
 
         <div class="imagenes">
-            <img src="recursos pagina/blanco.jpg" alt="">
+            <img src="img/blanco.jpg" alt="">
             <div class="datos">
                 <p>Chavindeca</p>
                 <div class="cantidad">
@@ -50,7 +52,7 @@
         </div>
 
         <div class="imagenes">
-            <img src="recursos pagina/blanco.jpg" alt="">
+            <img src="img/blanco.jpg" alt="">
             <div class="datos">
                 <p>Chavindeca</p>
                 <div class="cantidad">
@@ -62,14 +64,13 @@
             </div>
             <p>$60</p>
         </div>
+        <div class="total">
+            <h2>Total: </h2>
+            <h2>200</h2>
+        </div>
+        <div class="boton">
+            <a href="#">Pagar</a>
+        </div>
     </div>
-    <div class="total">
-        <h2>Total: </h2>
-        <h2>200</h2>
-    </div>
-    <div class="boton">
-        <a href="#">Pagar</a>
-    </div>
-    <div>aaaaaaa</div>
 </body>
 </html>
