--- a/inicio-sesion.html
+++ b/inicio-sesion.html
@@ -15,24 +15,26 @@
             <img class="fondoinicio" src="img/recetas-de-comida-típicas-de-Oaxaca-11-1.jpeg" alt="">
         </div>
         <form class="formularioo">
-            <div class="texto-formulario">
-                <h3>DÀN</h3>
-                <p>Please log in or sign up for an account</p>
-            </div>
-            <label for="email">Correo</label>
-            <input type="email" placeholder="name@domain.com" id="email">
-            <label for="password">Contraseña</label>
-            <input type="password" placeholder="contraseña" id="password">
-            <div class="texto-abajo">
-                <div class="recordar">
-                    <input type="checkbox" placeholder="recordatorio" id="remember">
-                    <label for="remember">Remember me</label>
+            <div>
+                <div class="texto-formulario">
+                    <h3>DÀN</h3>
+                    <p>Please log in or sign up for an account</p>
                 </div>
-                <a href="#">Forgot password</a>
-            </div>
-            <div class="botones">
-                <button class="Login">Log in</button>
-                <button class="Signup">Sign up</button>
+                <label for="email">Correo</label>
+                <input type="email" placeholder="name@domain.com" id="email">
+                <label for="password">Contraseña</label>
+                <input type="password" placeholder="contraseña" id="password">
+                <div class="texto-abajo">
+                    <div class="recordar">
+                        <input type="checkbox" placeholder="recordatorio" id="remember">
+                        <label for="remember">Remember me</label>
+                    </div>
+                    <a href="#">Forgot password</a>
+                </div>
+                <div class="botones">
+                    <button class="Login">Log in</button>
+                    <button class="Signup">Sign up</button>
+                </div>
             </div>
         </form>
 
