Cambios de Margin

--- a/EstructuraProyecto.html
+++ b/EstructuraProyecto.html
@@ -12,10 +12,10 @@
     <div class="contenedor-navegacion">
         <nav class="nav-principal contenedor">
             
-                <a >Inicio</a>      
+                <a href="#" >Inicio</a>      
             <div class="entrar">
                 <img class="usuario" src="img/imagen_2024-03-02_140324687-removebg-preview.png" alt="usuario">
-                <a>Entrar</a>
+                <a href="inicio-sesion.html">Entrar</a>
             </div>
        </nav>
        <h1>MENÚ</h1>
