cambio en coopertavia.css

--- a/EstructuraProyecto.html
+++ b/EstructuraProyecto.html
@@ -25,7 +25,7 @@
             <img src="img/quesadilla.jpg" alt="quesadilla">
         </div>
     </div>
-       <div>
+       <div class="seleccion">
             <select>
                 <option>Cooperativa 1</option>
                 <option>Cooperativa 2</option>
