--- a/MisPedidos.html
+++ b/MisPedidos.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="CSS/MisPedidos.css">
 </head>
 <body>
-    <div class="contenedor-navegacion">
+    <nav class="contenedor-navegacion">
         <nav class="nav-principal">
             <div class="botones">
                 <a href="#">Inicio</a>
@@ -20,17 +20,18 @@
                 </a>
             </div>
         </nav>
-    </div>
-    <h2>Mis pedidos</h2>
-    <div class="mispedidos">
-        <div class="Filtrar">
-            <img src="img/filtrar.png" alt="">
-            <p>Todos</p>
+    </nav>
+    <header>
+        <h2>Mis pedidos</h2>
+        <div class="mispedidos">
+            <div class="Filtrar">
+                <img src="img/filtrar.png" alt="">
+                <p>Todos</p>
+            </div>
+            <p>Cantidad de pedidos</p>
         </div>
-        <p>Cantidad de pedidos</p>
-    </div>
-
-    <div class="Pedidos">
+    </header>
+    <section class="Pedidos">
         <div class="Fecha">
             <h1>Fecha</h1>
             <a href="#">Mostrar QR</a>
@@ -59,8 +60,7 @@
                 </div>
             </div>
         </div>
-        
-    </div>
+    </section>
 
     <div class="Pedidos">
         <div class="Fecha">
