Cambio de Grid A Flex, también ajuste la conversión de 1rem=10px

--- a/MisPedidos.html
+++ b/MisPedidos.html
@@ -7,20 +7,21 @@
     <link rel="stylesheet" href="CSS/MisPedidos.css">
 </head>
 <body>
-    <nav class="contenedor-navegacion">
+    <div class="contenedor-navegacion">
         <nav class="nav-principal">
             <div class="botones">
                 <a href="#">Inicio</a>
                 <a href="MisPedidos.html">Mis pedidos</a>
             </div>
-            <div class="carrito">
+            <div class="entrar">
                 <img src="img/imagen_2024-03-02_140324687-removebg-preview.png" alt="usuario">
+                <p>Huevito</p>
                 <a href="micarrito.html">
                     <img src="img/carro-de-compras-rapido (1).png" alt="">
                 </a>
             </div>
         </nav>
-    </nav>
+    </div>
     <header>
         <h2>Mis pedidos</h2>
         <div class="mispedidos">
@@ -36,6 +37,8 @@
             <h1>Fecha</h1>
             <a href="#">Mostrar QR</a>
         </div>
+
+        
         <div class="imagenes">
             <img src="img/blanco.jpg" alt="">
             <div class="datos">
@@ -48,6 +51,8 @@
                 </div>
             </div>
         </div>
+
+
         <div class="imagenes">
             <img src="img/blanco.jpg" alt="">
             <div class="datos">
