--- a/micarrito.html
+++ b/micarrito.html
@@ -15,6 +15,7 @@
             </div>
             <div class="entrar">
                 <img src="img/imagen_2024-03-02_140324687-removebg-preview.png" alt="usuario">
+                <p>Huevito</p>
                 <a href="micarrito.html">
                     <img src="img/carro-de-compras-rapido (1).png" alt="">
                 </a>
@@ -23,50 +24,59 @@
     </div>
     <div class="Compras">
         <h1>Mi carrito</h1>
+
+
         <div class="imagenes">
-            <img src="img/blanco.jpg" alt="">
-            <div class="datos">
-                <p>Chavindeca</p>
-                <div class="cantidad">
-                    <p>Cantidad:</p>
-                    <p>1</p>
-                    <p>Tamaño:</p>
-                    <p>Grande</p>
+            <div class="detalles">
+                <img src="img/blanco.jpg" alt="">
+                <div class="datos">
+                    <h3>Chavindeca</h3>
+                    <div class="cantidad">
+                        <p>Cantidad:</p>
+                        <p>1</p>
+                        <p>Tamaño:</p>
+                        <p>Grande</p>
+                    </div>
                 </div>
             </div>
-            <p>$90</p>
+            <p class="precio">$60</p>
         </div>
 
         <div class="imagenes">
-            <img src="img/blanco.jpg" alt="">
-            <div class="datos">
-                <p>Chavindeca</p>
-                <div class="cantidad">
-                    <p>Cantidad:</p>
-                    <p>1</p>
-                    <p>Tamaño:</p>
-                    <p>Grande</p>
+            <div class="detalles">
+                <img src="img/blanco.jpg" alt="">
+                <div class="datos">
+                    <h3>Chavindeca</h3>
+                    <div class="cantidad">
+                        <p>Cantidad:</p>
+                        <p>1</p>
+                        <p>Tamaño:</p>
+                        <p>Grande</p>
+                    </div>
                 </div>
             </div>
-            <p>$50</p>
+            <p class="precio">$60</p>
         </div>
 
+
         <div class="imagenes">
-            <img src="img/blanco.jpg" alt="">
-            <div class="datos">
-                <p>Chavindeca</p>
-                <div class="cantidad">
-                    <p>Cantidad:</p>
-                    <p>1</p>
-                    <p>Tamaño:</p>
-                    <p>Grande</p>
+            <div class="detalles">
+                <img src="img/blanco.jpg" alt="">
+                <div class="datos">
+                    <h3>Chavindeca</h3>
+                    <div class="cantidad">
+                        <p>Cantidad:</p>
+                        <p>1</p>
+                        <p>Tamaño:</p>
+                        <p>Grande</p>
+                    </div>
                 </div>
             </div>
-            <p>$60</p>
+            <p class="precio">$60</p>
         </div>
         <div class="total">
-            <h2>Total: </h2>
-            <h2>200</h2>
+                <h2>Total: </h2>
+                <h2>200</h2>
         </div>
         <div class="boton">
             <a href="#">Pagar</a>
