modificaciones del menu y nuevos archivps

--- a/PaginaMenu.html
+++ b/PaginaMenu.html
@@ -5,21 +5,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Maquetación</title>
-    <link rel="stylesheet" href="CSS/Cooperativa.css">
+    <link rel="stylesheet" href="CSS/PaginaMenu.css">
     <link href="https://fonts.cdnfonts.com/css/tw-cen-mt" rel="stylesheet">
 
 </head>
 
 <body>
-    <div class="contenedor-navegacion">
-        <nav class="nav-principal contenedor">
 
-            <a href="#">Inicio</a>
+    <div class="contenedor-navegacion">
+        <nav class="nav-principal">
+            <div class="botones">
+                <a href="#">Inicio</a>
+                <a href="MisPedidos.html">Mis pedidos</a>
+            </div>
             <div class="entrar">
-                <img class="usuario" src="img/imagen_2024-03-02_140324687-removebg-preview.png" alt="usuario">
-                <a href="inicio-sesion.html">Entrar</a>
+                <img src="img/imagen_2024-03-02_140324687-removebg-preview.png" alt="usuario">
+                <a class="nombre">Huevito</a>
+                <a href="micarrito.html">
+                    <img src="img/carro-de-compras-rapido (1).png" alt="">
+                </a>
             </div>
         </nav>
+    </div>
         <h1>MENÚ</h1>
 
         <div class="imagengrande">
