CAMBIOS_DE_BARRA_NAVEGACIÓN

--- a/micarrito.html
+++ b/micarrito.html
@@ -5,23 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ESTRUCTURA HTML</title>
     <link rel="stylesheet" href="CSS/micarrito.css">
+    <script src="JS/Navegacion.js"></script>
 </head>
 <body>
-    <div class="contenedor-navegacion">
-        <nav class="nav-principal">
-            <div class="botones">
-                <a href="#">Inicio</a>
-                <a href="MisPedidos.html">Mis pedidos</a>
-            </div>
-            <div class="entrar">
-                <img src="img/imagen_2024-03-02_140324687-removebg-preview.png" alt="usuario">
-                <p>Huevito</p>
-                <a href="micarrito.html">
-                    <img src="img/carro-de-compras-rapido (1).png" alt="">
-                </a>
-            </div>
-        </nav>
-    </div>
+    
+    <div id="menu-container" class="menu-container"></div>
     <div class="Compras">
         <h1>Mi carrito</h1>
 
@@ -42,6 +30,38 @@
             <p class="precio">$60</p>
         </div>
 
+        <div class="imagenes">
+            <div class="detalles">
+                <img src="img/blanco.jpg" alt="">
+                <div class="datos">
+                    <h3>Chavindeca</h3>
+                    <div class="cantidad">
+                        <p>Cantidad:</p>
+                        <p>1</p>
+                        <p>Tamaño:</p>
+                        <p>Grande</p>
+                    </div>
+                </div>
+            </div>
+            <p class="precio">$60</p>
+        </div>
+
+        <div class="imagenes">
+            <div class="detalles">
+                <img src="img/blanco.jpg" alt="">
+                <div class="datos">
+                    <h3>Chavindeca</h3>
+                    <div class="cantidad">
+                        <p>Cantidad:</p>
+                        <p>1</p>
+                        <p>Tamaño:</p>
+                        <p>Grande</p>
+                    </div>
+                </div>
+            </div>
+            <p class="precio">$60</p>
+        </div>
+        
         <div class="imagenes">
             <div class="detalles">
                 <img src="img/blanco.jpg" alt="">
@@ -79,7 +99,7 @@
                 <h2>200</h2>
         </div>
         <div class="boton">
-            <a href="#">Pagar</a>
+            <a href="Metodo-Pago.html">Pagar</a>
         </div>
     </div>
 </body>
