--- a/QRefectivo.html
+++ b/QRefectivo.html
@@ -5,22 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>QR Efectivo</title>
     <link rel="stylesheet" href="CSS/QRefectivo.css">
+    <script src="JS/Navegacion.js"></script>
 </head>
 <body>
-    <div class="contenedor-navegacion">
-        <nav class="nav-principal">
-            <div class="botones">
-                <a href="#">Inicio</a>
-                <a href="MisPedidos.html">Mis pedidos</a>
-            </div>
-            <div class="entrar">
-                <img src="img/imagen_2024-03-02_140324687-removebg-preview.png" alt="usuario">
-                <a href="micarrito.html">
-                    <img src="img/carro-de-compras-rapido (1).png" alt="">
-                </a>
-            </div>
-        </nav>
-    </div>
+    <div id="menu-container" class="menu-container"></div>
     <div class="Pago">
         <h1>Tu QR</h1>
         <div class="imagenes">
