Acomodo con media query

--- a/EstructuraProyecto.html
+++ b/EstructuraProyecto.html
@@ -7,38 +7,34 @@
     <title>Maquetación</title>
     <link rel="stylesheet" href="CSS/Cooperativa.css">
     <link href="https://fonts.cdnfonts.com/css/tw-cen-mt" rel="stylesheet">
-
+    <script src="JS/Navegacion.js"></script>
 </head>
 
 <body>
-    <div class="contenedor-navegacion">
-        <nav class="nav-principal contenedor">
-
-            <a href="#">Inicio</a>
-            <div class="entrar">
-                <img class="usuario" src="img/imagen_2024-03-02_140324687-removebg-preview.png" alt="usuario">
-                <a href="inicio-sesion.html">Entrar</a>
-            </div>
-        </nav>
-        <h1>MENÚ</h1>
-
-        <div class="imagengrande">
-            <div class="imgquesadilla">
-                <img src="img/quesadilla.jpg" alt="quesadilla">
+    <div id="menu-container" class="menu-container"></div>
+    <h1>MENÚ</h1>
+        <div class="slider-wrapper">
+        <div class="slider-container">
+            <div class="slider">
+                <img class="slide" src="img/quesadilla.jpg" alt="">
+                <img class="slide" src="img/aporreadillo.jpg" alt="">
+                <img class="slide" src="img/mole.png" alt="">
             </div>
         </div>
+    </div>
         <div class="seleccion">
             <select>
                 <option>Cooperativa 1</option>
                 <option>Cooperativa 2</option>
             </select>
+            <div class="borde"></div>
         </div>
 
         <div class="imagenes_menu">
             <div class="image_chavindeca">
                 <img src="img/chavindeca.jpg" alt="chavindeca">
                 <div class="texto-menu">
-                    <p>Chavindeca</p>
+                    <p class="nombre">Chavindeca</p>
                     <p class="precio">$60</p>
                     <div class="cantidad-producto">
 
@@ -57,16 +53,16 @@
             <div class="image_hamburguesa">
                 <img src="img/hamburguesa.jpg" alt="">
                 <div class="texto-menu">
-                    <p>Chavindeca</p>
-                    <p class="precio">$60</p>
+                    <p class="nombre">Hamburguesa</p>
+                    <p class="precio">$45</p>
                     <div class="cantidad-producto">
 
                         <input type="number" class="input-cantidad" value="1" min="1" max="10">
                         <button class="btn-sumar">+</button>
                     </div>
                     <select class="combo_tamaño">
-                        <option>Grande</option>
-                        <option>Chica</option>
+                        <option>Sin papas</option>
+                        <option>Con papas</option>
                     </select>
                     <a href="#">Añadir</a>
                 </div>
@@ -74,16 +70,16 @@
             <div class="image_quesadillasD">
                 <img src="img/quesadilla dorada.jpg" alt="">
                 <div class="texto-menu">
-                    <p>Chavindeca</p>
-                    <p class="precio">$60</p>
+                    <p class="nombre">Quesadillas D</p>
+                    <p class="precio">$20</p>
                     <div class="cantidad-producto">
 
                         <input type="number" class="input-cantidad" value="1" min="1" max="10">
                         <button class="btn-sumar">+</button>
                     </div>
                     <select class="combo_tamaño">
-                        <option>Grande</option>
-                        <option>Chica</option>
+                        <option>Sin Carne</option>
+                        <option>Con Carne</option>
                     </select>
                     <a href="#">Añadir</a>
                 </div>
@@ -91,16 +87,16 @@
             <div class="image_quesadilla">
                 <img src="img/quesadilla.jpg" alt="">
                 <div class="texto-menu">
-                    <p>Chavindeca</p>
-                    <p class="precio">$60</p>
+                    <p class="nombre">Quesadilla</p>
+                    <p class="precio">$20</p>
                     <div class="cantidad-producto">
 
                         <input type="number" class="input-cantidad" value="1" min="1" max="10">
                         <button class="btn-sumar">+</button>
                     </div>
                     <select class="combo_tamaño">
-                        <option>Grande</option>
-                        <option>Chica</option>
+                        <option>Sin Carne</option>
+                        <option>Con Carne</option>
                     </select>
                     <a href="#">Añadir</a>
                 </div>
@@ -108,16 +104,16 @@
             <div class="image_Sandwich">
                 <img src="img/sandwich.jpg" alt="">
                 <div class="texto-menu">
-                    <p>Chavindeca</p>
-                    <p class="precio">$60</p>
+                    <p class="nombre"p>Sandwich</p>
+                    <p class="precio">$20</p>
                     <div class="cantidad-producto">
 
                         <input type="number" class="input-cantidad" value="1" min="1" max="10">
                         <button class="btn-sumar">+</button>
                     </div>
                     <select class="combo_tamaño">
+                        <option>Sencillo</option>
                         <option>Grande</option>
-                        <option>Chica</option>
                     </select>
                     <a href="#">Añadir</a>
                 </div>
@@ -125,8 +121,8 @@
             <div class="image_sincronizada">
                 <img src="img/sincronizada.jpg" alt="">
                 <div class="texto-menu">
-                    <p>Chavindeca</p>
-                    <p class="precio">$60</p>
+                    <p class="nombre">Sincronizada</p>
+                    <p class="precio">$30</p>
                     <div class="cantidad-producto">
 
                         <input type="number" class="input-cantidad" value="1" min="1" max="10">
@@ -142,7 +138,7 @@
             <div class="image_torta">
                 <img src="img/torta deshebrada.jpg" alt="">
                 <div class="texto-menu">
-                    <p>Torta</p>
+                    <p class="nombre">Torta</p>
                     <p class="precio">$40</p>
                     <div class="cantidad-producto">
 
@@ -150,7 +146,7 @@
                         <button class="btn-sumar">+</button>
                     </div>
                     <select class="combo_tamaño">
-                        <option>Grande</option>
+                        <option>Deshebrada</option>
                         <option>Chica</option>
                     </select>
                     <a href="#">Añadir</a>
@@ -159,7 +155,7 @@
             <div class="image_tortadoble">
                 <img src="img/WhatsApp Image 2024-03-19 at 10.24.06 AM (2).jpeg" alt="">
                 <div class="texto-menu">
-                    <p>Torta doble</p>
+                    <p class="nombre">Torta doble</p>
                     <p class="precio">$50</p>
                     <div class="cantidad-producto">
 
@@ -176,7 +172,7 @@
             <div class="image_tacosdorados">
                 <img src="img/WhatsApp Image 2024-03-19 at 10.24.06 AM (1).jpeg" alt="">
                 <div class="texto-menu">
-                    <p>Tacos dorados</p>
+                    <p class="nombre">Tacos dorados</p>
                     <p class="precio">$4</p>
                     <div class="cantidad-producto">
 
@@ -194,7 +190,7 @@
             <div class="image_morisqueta">
                 <img src="img/WhatsApp Image 2024-03-19 at 10.24.06 AM.jpeg" alt="">
                 <div class="texto-menu">
-                    <p>Morisqueta</p>
+                    <p class="nombre">Morisqueta</p>
                     <p class="precio">$20</p>
                     <div class="cantidad-producto">
 
@@ -211,7 +207,7 @@
             <div class="image_papas">
                 <img src="img/WhatsApp Image 2024-03-19 at 10.24.05 AM.jpeg" alt="">
                 <div class="texto-menu">
-                    <p>Papas</p>
+                    <p class="nombre">Papas</p>
                     <p class="precio">$30</p>
                     <div class="cantidad-producto">
 
@@ -228,7 +224,7 @@
             <div class="image_tacos">
                 <img src="img/WhatsApp Image 2024-03-19 at 10.29.00 AM.jpeg" alt="">
                 <div class="texto-menu">
-                    <p>Tacos</p>
+                    <p class="nombre">Tacos</p>
                     <p class="precio">$20</p>
                     <div class="cantidad-producto">
 
@@ -239,7 +235,7 @@
                         <option>Chica</option>
                         <option>Grande</option>
                     </select>
-                    <a href="#">Añadir</a>
+                    <a class="boton" href="#">Añadir</a>
                 </div>
             </div>
         </div>
