--- a/pagotarjeta.html
+++ b/pagotarjeta.html
@@ -11,18 +11,19 @@
 <body>
     <div id="menu-container" class="menu-container"></div>
     <div class="pagos">
+        <h1>Ingrese los datos de la tarjeta con la que deseas pagar tu orden</h1>
         <div class="imagenes">
 
             <div class="datos">
 
                 <div class="numero">
                     <p>Numero de tarjeta</p>
-                    <input type="text">
+                    <input type="text" placeholder="Numero de targeta">
                 </div>
 
                 <div>
                     <p>Nombre y Apellido</p>
-                    <input type="text">
+                    <input type="text" placeholder="Nombre y Apellido">
                 </div>
 
                 <div class="codi">
@@ -48,7 +49,7 @@
                     
                     <div class="codigo">
                         <p>Codigo de seguridad:</p>
-                        <input type="text">
+                        <input type="text" placeholder="CVV">
                         <div class="letra">
                             <p>CVV</p>
                         </div>
@@ -65,7 +66,7 @@
 
 
         <div class="boton">
-            <a href="#">Pagar</a>
+            <a href="QRtarjeta.html">Pagar</a>
         </div>
     </div>
 </body>
