--- a/QRtarjeta.html
+++ b/QRtarjeta.html
@@ -28,7 +28,7 @@
         </div>
 
         <div class="boton">
-            <a href="#">Volver a Mis Pedidos</a>
+            <a href="MisPedidos.html">Volver a Mis Pedidos</a>
         </div>
     </div>
 </body>
