pago tarjeta mq

--- a/pagotarjeta.html
+++ b/pagotarjeta.html
@@ -60,7 +60,7 @@
 
 
             <div class="tarjeta">
-                <img src="img/tarjeta-bancaria.png" alt="">
+                <img src="img/tarjeta-bancaria.png" alt="" class="tarj">
             </div>
         </div>
 
