Vinculacion de paginas

--- a/MisPedidos.html
+++ b/MisPedidos.html
@@ -22,7 +22,7 @@
     <section class="Pedidos">
         <div class="Fecha">
             <h1>Fecha</h1>
-            <a href="#">Mostrar QR</a>
+            <a href="QRefectivo.html">Mostrar QR</a>
         </div>
 
         
@@ -57,7 +57,7 @@
     <div class="Pedidos">
         <div class="Fecha">
             <h1>Fecha</h1>
-            <a href="#">Mostrar QR</a>
+            <a href="QRtarjeta.html">Mostrar QR</a>
         </div>
         <div class="imagenes">
             <img src="img/blanco.jpg" alt="">
