--- a/Pedidoexitoso.html
+++ b/Pedidoexitoso.html
@@ -16,8 +16,8 @@
         <h2>¡Su pedido se ha realizado exitosamente!</h2>
         <img src="img/telefono-inteligente.png" alt="">
         <div class="botones">
-            <a href="">Volver al menú</a>
-            <a href="">Revisar pedido</a>
+            <a href="EstructuraProyecto.html">Volver al menú</a>
+            <a href="MisPedidos.html">Revisar pedido</a>
         </div>
     </div>
 </body>
