--- a/Navegacion.html
+++ b/Navegacion.html
@@ -7,7 +7,7 @@
             <button class="Cerrar_Menu" id="cerrar"><i class="bi bi-x"></i></button>
             <div class="nav">
                 <div class="botones">
-                    <a href="#"><img src="img/casa.png" alt="Celular" class="Celu">Inicio</a>
+                    <a href="EstructuraProyecto.html"><img src="img/casa.png" alt="Celular" class="Celu">Inicio</a>
                     <a href="MisPedidos.html"><img src="img/lista-de-verificacion.png" alt="Celular" class="Celu">Mis pedidos</a>
                 </div>
                 <div class="entrar">
