--- a/micarrito.html
+++ b/micarrito.html
@@ -99,7 +99,7 @@
                 <h2>200</h2>
         </div>
         <div class="boton">
-            <a href="Metodo-Pago.html">Pagar</a>
+            <a href="Metodo-Pago.php">Pagar</a>
         </div>
     </div>
 </body>
