--- a/Registro.html
+++ b/Registro.html
@@ -11,18 +11,18 @@
         <div class="fondo">
             <img class="fondoinicio" src="img/recetas-de-comida-típicas-de-Oaxaca-11-1.jpeg" alt="">
         </div>
-        <form class="formularioo">
+        <form action="registro.php" method="POST" class="formularioo">
             <div>
                 <div class="texto-formulario">
                     <h3>DÀN</h3>
                    
                 </div>
                 <label for="username">Nombre de Usuario</label>
-                <input type="text" placeholder="nombre de usuario" id="username">
+                <input type="text" placeholder="nombre de usuario" id="username" name="name">
                 <label for="email">Correo</label>
-                <input type="email" placeholder="name@domain.com" id="email">
+                <input type="email" placeholder="name@domain.com" id="email" name="email">
                 <label for="password">Contraseña</label>
-                <input type="password" placeholder="contraseña" id="password">
+                <input type="password" placeholder="contraseña" id="password" name="password">
                 <div class="texto-abajo">
                 </div>
                 <div class="botones">
